<resources>
    <string name="app_name">new navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="divya_bhaskar">Divya Bhaskar</string>
    <string name="gujarat_samachar">Gujarat Samachar</string>
    <string name="sandesh">Sandesh</string>
    <string name="aaj_tak">Aaj Tak</string>
    <string name="bbc">BBC</string>
    <string name="news_application">News Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="About">About</string>
    <string name="todo">TODO</string>
</resources>